[Blimp Engine] Adds a WindowTreeClient so that popup such as select dropdown will have non-null parent.

After this CL, Engine no longer crashes, but tapping select box does not show dropdown because of crbug/598764.

BUG=597992

Review URL: https://codereview.chromium.org/1842593002

Cr-Commit-Position: refs/heads/master@{#384027}

Former-commit-id: 0539fc4bc55c129a632bc9b10dc36601b9fac8ad